# City-vegetation-analysis

./: .env.template  .flake8  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: fomat.yaml
datasets/: villes_villages_fleuris.shp
docs/docs/: devnote.md
notebooks/: data_binding.ipynb  image_analysis.ipynb  initial_exploration.ipynb  ndvi_data_collection.ipynb  show_ndvi_image.ipynb
src/: __init__.py
src/data/: __init__.py  data_collection.py
src/data/evalscript/: evalscript.js  interpolation_evalscript.js
src/features/: __init__.py  mask.py
src/visualization/: visualize.py
