[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
name = "vegetation_analysis"
version = "0.1.0"
description = 'Use of satellite data to analysis the NDVI of the "Hauts de France" region, and compare the results with the "ville et village fleuris" label.'
authors = ["Gatien CHENU <gatien+dev@chenu.me>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
geopandas = "^1.0.1"
plotly = "^5.24.1"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
numpy = "^2.1.1"
pandas = "^2.2.3"
shapely = "^2.0.6"
folium = "^0.17.0"
python-dotenv = "^1.0.1"
mkdocs-plotly-plugin = "^0.1.3"
mkdocstrings = "^0.26.1"
mkdocstrings-python = "^1.11.1"
rasterio = "^1.4.1"
treescope = "^0.1.5"

[tool.poetry.dev-dependencies]
# formatting, quality, tests
black = "^23.10.1"
flake8 = "^6.1.0"
ipykernel = "^6.29.4"
ipywidgets = "^8.1.2"
isort = "^5.12.0"
notebook = "^7.0.4"
pre-commit = "^3.4.0"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"

# tasks
duty = ">=0.6.0"
git-changelog = ">=0.5.0"
httpx = ">=0.16.1"
jinja2-cli = ">=0.7.0"
toml = ">=0.10.2"

# flake8 plugins
flake8-bandit = ">=2.1.2"
flake8-black = ">=0.2.1"
flake8-bugbear = ">=20.11.1"
flake8-builtins = ">=1.5.3"
flake8-comprehensions = ">=3.3.1"
flake8-docstrings = ">=1.5.0"
flake8-string-format = ">=0.3.0"
flake8-tidy-imports = ">=4.2.1"
flake8-variables-names = ">=0.0.4"
pep8-naming = ">=0.11.1"
pydocstyle = ">=6.1.1"

# docs
mkdocs = ">=1.2.2"
mkdocs-coverage = ">=0.2.1"
mkdocs-macros-plugin = ">=0.5.0"
mkdocs-material = ">=6.2.7"
mkdocstrings = ">=0.16.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.black]
exclude = "/(.venv)/"
line-length = 110

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 110
multi_line_output = 3
skip_glob = ["**/.env*", "**/env/*", "**/.venv/*", "**/docs/*", "*.ipynb", "**/app.py"]
use_parentheses = true
